# src/api/workout-tracker-api.ts
@@ -1,7 +1,15 @@
-import {Configuration, WorkoutApi} from "@generated/workout-tracker-api";
+import {
+    Configuration,
+    UserWorkoutApi,
+    UserWorkoutApiFactory,
+    WorkoutApi,
+    WorkoutApiFactory
+} from "@generated/workout-tracker-api";
 
 const configuration = new Configuration({
     basePath: "http://localhost:5250",
 });
 
-export const workoutTrackerApi = new WorkoutApi(configuration);
+export const {getWorkout, createWorkout} = WorkoutApiFactory(configuration);
+export const {getWorkoutsOfUser} = UserWorkoutApiFactory(configuration);
+
